# textMan

./: .editorconfig  .env.example  .gitignore  BRANCH_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONTINUATION.md  CONTRIBUTING.md  LICENSE  PR_DESCRIPTION.md  README.md  SECURITY.md  SESSION_REPORT.md  app.py  index.html  launch_textman.bat  main.py  manifest.json  mobile-debug.html  pyproject.toml  requirements.txt  setup.cfg  start-server.sh  test-debug.html  textCraft.html  textman_dependencies_log.txt
app/core/: engine.py
app/plugins/: __init__.py
css/: animations.css  base.css  buttons.css  editor.css  forms.css  header.css  layout.css  modals.css  print.css  responsive.css  sidebar.css  styles-new.css  styles.css  typography.css  ui-components.css  variables.css
css/base/: reset.css  theme.css  variables.css
css/components/: analytics.css  buttons.css  command-palette.css  context-menu.css  drop-zone.css  forms.css  history.css  import-export.css  loading.css  modal.css  panels.css  search.css  templates.css  toast.css  tooltip.css
css/layout/: app.css  editor.css  header.css  sidebar.css
docs/: ARCHITECTURE.md  CONTINUATION.md
js/: advanced-tools.js  app.js  clipboard.js  config.js  drag-drop.js  editor.js  file-operations.js  find-replace.js  keyboard-shortcuts.js  main.js  modules.js  scripts.js  sidebar.js  state.js  statistics.js  textCraft.js  theme.js  transformations.js  ui-components.js  utils.js
modules/: editor.js  settings-manager.js  text-processor.js  toast-manager.js  ui-controller.js
tests/: plugin_test.py  terminal_ui_test.py
(+59 files in other folders)
