[metadata]
name = textman
description = Advanced Text Manipulation Tool
author = TextMan Team
lead_dev = Dennis 'dnoice' Smaltz
ai_stack = Claude 3.7 Sonnet
ai_project = https://claude.ai/project/0196c15c-de48-75e3-8db3-b389dbe003bc
github_status = Public
github_repo_url = https://github.com/dnoice/textMan

[options]
packages = find:
python_requires = >=3.8
